Revision history for {{$dist->name}}

{{$NEXT}}

0.02      2014-11-19 08:39:17 -0500
  - add optional registry detection on MSWin32
  - add optional default path detection on MSWin32

0.01      2014-11-18 13:49:21 -0500
  - initial version