@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - handle paths with space on MSWin32
 
 0.02      2014-11-19 08:39:17 -0500
   - add optional registry detection on MSWin32
